# Alcove

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: LFUCache.hpp
include/Cache/: Cache.h  FIFOCache.hpp  LFUCache.hpp  LRUCache.hpp
include/MyRandom/: Constants.hpp  MyRandom.hpp
include/Proxy/: Proxy.hpp  StocksProxy.hpp  WeatherProxy.hpp
src/: Cache.h  FIFOCache.hpp  LRUCache.hpp  cliHelper.cpp  cliHelper.h  main.cpp
test/: FIFOCache_tests.cpp  LFUCache_tests.cpp  LRUCache_tests.cpp  StocksProxy_tests.cpp  WeatherProxy_tests.cpp
